--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1"
   },
   "name": "lets_chat",
   "version": "1.0.0",
