--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3-v3": "^33.0.12",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1"
